--- a/leetcodeDSA.html
+++ b/leetcodeDSA.html
@@ -7,6 +7,7 @@
     <title>Leetcode DSA Challenge</title>
 </head>
 <body>
-    
+    <h1>LeetCode Datastructure</h1>
 </body>
+<script src="removeDupl.js"></script>
 </html>
