--- a/leetcodeDSA.html
+++ b/leetcodeDSA.html
@@ -9,5 +9,7 @@
 <body>
     <h1>LeetCode Datastructure</h1>
 </body>
-<script src="removeDupl.js"></script>
+<!-- <script src="removeDupl.js"></script> -->
+<script src="removeEl.js"></script>
+
 </html>
